--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/ha-manel/Tasty/issues"
   },
   "homepage": "https://github.com/ha-manel/Tasty",
-   "devDependencies": {
+  "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
@@ -36,5 +36,8 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "babel-loader": "^8.2.5"
   }
 }
